# nightloop

./: AGENTS.md  Cargo.toml  LICENSE  README.md  nightloop.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: campaign-parent.yml  child-task.yml
docs/: blueprint.md  codex-release-handoff.md  release-smoke.md  requirements.md
docs/templates/: adr.md  eval.md  plan.md  prd.md  spec.md
prompts/: child_issue_from_plan.md  estimate_issue.md  plan_child_issue.md  refine_prd.md  refine_spec.md
src/: agent_exec.rs  budget.rs  config.rs  control_assets.rs  diff_budget.rs  docs_support.rs  errors.rs  estimate.rs  git_ops.rs  github.rs  intent_bundle.rs  issue_lint.rs  issue_parse.rs  lib.rs  main.rs  models.rs  prompt_builder.rs  reporting.rs  run_outcome.rs  runner.rs  selection.rs  telemetry.rs
targets/: canaria.toml  example-sandbox.toml
tests/: cli.rs
tests/fixtures/: github_issue.json  github_labels.json
