[package]
name = "nightloop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Issue-first nightly execution runner for coding agents"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
